# sherpa

./: .gitignore  CMakeLists.txt  LICENSE  License.rtf  README.md  Sherpa.pro  clean  clean.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mkwin32.py  sherpa.pro  sherpa.spec  sherpa.wxs
builders/: mkf25spec.py  mkwin32.py  sherpa_template.wxs
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  sherpa.qrc  sherpa_exceptions.h  utility.cpp  utility.h  zipper.cpp  zipper.h
