cmake_minimum_required(VERSION 3.6)
project(sherpa VERSION 0.4.0)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_CXX_STANDARD 14)

find_package(Qt5Widgets)

if(WIN32)
  set(GPGDIR "C:/Program Files (x86)/GnuPG")
  set(CMAKE_FIND_LIBRARY_PREFIXES "")
  set(CMAKE_FIND_LIBRARY_SUFFIXES ".lib" ".dll")
  find_path(MINIZIP_INCLUDE_DIR zip.h HINTS "C:/zlib/include" PATH_SUFFIXES minizip)
  find_path(GNUPG_INCLUDE_DIR gpgme.h HINTS ${GPGDIR}/include)
  find_library(MINIZIP_LIBRARY minizip HINTS "C:/zlib/lib")
  find_library(GPGME_LIBRARY libgpgme HINTS ${GPGDIR}/bin)
  find_library(ASSUAN_LIBRARY libassuan HINTS ${GPGDIR}/bin)
  find_library(GPGERR_LIBRARY libgpg-error HINTS ${GPGDIR}/bin)
elseif(UNIX)
  set(SEARCHLIBS "/usr/lib" "/usr/local/lib" "/Users/rjh/lib" "/home/rjh/lib")
  find_path(MINIZIP_INCLUDE_DIR zip.h HINTS /usr/include /usr/local/include /Users/rjh/include /home/rjh/include /usr/local/Cellar/minizip/1.1/include PATH_SUFFIXES minizip)
  find_path(GNUPG_INCLUDE_DIR gpgme.h HINTS /usr/include /usr/local/include /Users/rjh/include /home/rjh/include)
  find_library(MINIZIP_LIBRARY minizip HINTS ${SEARCHLIBS} /usr/local/Cellar/minizip/1.1/lib)
  find_library(GPGME_LIBRARY gpgme HINTS ${SEARCHLIBS})
  find_library(ASSUAN_LIBRARY assuan HINTS ${SEARCHLIBS})
  find_library(GPGERR_LIBRARY gpg-error HINTS ${SEARCHLIBS})
endif()

message(STATUS "Minizip include dir: " ${MINIZIP_INCLUDE_DIR})
message(STATUS "Minizip library:     " ${MINIZIP_LIBRARY})
message(STATUS "GPGME include dir:   " ${GNUPG_INCLUDE_DIR})
message(STATUS "GPGME library:       " ${GPGME_LIBRARY})
message(STATUS "Assuan library:      " ${ASSUAN_LIBRARY})
message(STATUS "Gpg-err library:     " ${GPGERR_LIBRARY})

add_executable(sherpa aboutdialog.cpp main.cpp mainwindow.cpp)
target_link_libraries(sherpa Qt5::Widgets ${MINIZIP_LIBRARY} ${GPGME_LIBRARY} ${ASSUAN_LIBRARY} ${GPGERR_LIBRARY})


set(CPACK_GENERATOR "RPM")
set(CPACK_RPM_PACKAGE_SUMMARY "A tool to migrate GnuPG user profiles.")
set(CPACK_RPM_PACKAGE_NAME "sherpa")
set(CPACK_PACKAGE_NAME "sherpa")
set(CPACK_RPM_PACKAGE_VERSION ${VERSION})
set(CPACK_PACKAGE_VERSION ${VERSION})
set(CPACK_PACKAGE_RELEASE "1")
set(CPACK_RPM_PACKAGE_LICENSE "ISC")
set(CPACK_RPM_PACKAGE_REQUIRES "gpgme >= 1.6.0, qt5 >= 5.7.0, minizip >= 1.1")
include(CPack)
